--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -393,7 +393,9 @@
       "padding": {
         "section_padding_heading": "Section padding",
         "padding_top": "Top padding",
-        "padding_bottom": "Bottom padding"
+        "padding_bottom": "Bottom padding",
+        "padding_top_desk": "Top padding desktop",
+        "padding_bottom_desk": "Bottom padding desktop"
       },
       "spacing": "Spacing",
       "colors": {
