added block additional info

--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -2009,6 +2009,9 @@
             }
           }
         },
+        "additional_info": {
+          "name": "Additional information",
+        },
         "title": {
           "name": "Title"
         },
