--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -2009,8 +2009,8 @@
             }
           }
         },
-        "additional_info": {
-          "name": "Additional information",
+        "ingredients": {
+          "name": "Ingredients",
         },
         "title": {
           "name": "Title"
