added nutritional_facts block

--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -2012,6 +2012,9 @@
         "ingredients": {
           "name": "Ingredients",
         },
+         "nutritional_facts": {
+          "name": "Nutritional facts",
+        },
         "title": {
           "name": "Title"
         },
